alpm-db/tests/snapshots/integration__format__format__json_pretty__case_1.snap
---
source: alpm-db-desc/tests/integration.rs
expression: json.to_string()
---
{
  "name": "foo",
  "version": {
    "pkgver": "1.0.0",
    "epoch": null,
    "pkgrel": {
      "major": 1,
      "minor": null
    }
  },
  "base": "foo",
  "description": "An example package",
  "url": "https://example.org/",
  "arch": "x86_64",
  "builddate": 1733737242,
  "installdate": 1733737243,
  "packager": {
    "name": "Foobar McFooface",
    "email": "foobar@mcfooface.org"
  },
  "size": 123,
  "groups": [
    "utils",
    "cli"
  ],
  "reason": "Depend",
  "license": [
    "MIT",
    "Apache-2.0"
  ],
  "validation": [
    "Pgp"
  ],
  "replaces": [
    "pkg-old"
  ],
  "depends": [
    {
      "name": "glibc",
      "version_requirement": null
    }
  ],
  "optdepends": [
    {
      "package_relation": {
        "name": "optpkg",
        "version_requirement": null
      },
      "description": null
    }
  ],
  "conflicts": [
    "foo-old"
  ],
  "provides": [
    "foo-virtual"
  ]
}
